--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -32,7 +32,7 @@ command_timeout = 5000
 show_always = true
 style_user = "fg:text bg:#3b4252"
 style_root = "fg:purple bg:#3b4252"
-format = '[󰧨 󰇅 󱢇 ]($style)'
+format = '[  󱢇 ]($style)'
 
 
 [directory]
