--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ $screenshot = $scriptsDir/screenshot
 $lock = $scriptsDir/lockscreen
 $colorpicker = $scriptsDir/colorpicker
 $wofi_beats = $scriptsDir/wofi-beats
-$files = thunar
+$files = dolphin
 $browser = librewolf
 $editor = alacritty -e lvim
 $term = kitty
