--- a/.config/hypr/hyprconfigs/monitors.conf
+++ b/.config/hypr/hyprconfigs/monitors.conf
@@ -1,5 +1,5 @@
-# monitor=HDMI-A-6,1920x1080@60,1920x0,1
-monitor=HDMI-A-6,disabled
+monitor=HDMI-A-6,1920x1080@60,1920x0,1
+# monitor=HDMI-A-6,disabled
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
 
