update with zellij

--- a/.config/hypr/hyprconfigs/keybindings.conf
+++ b/.config/hypr/hyprconfigs/keybindings.conf
@@ -15,8 +15,9 @@ bind = $super, V, exec, pavucontrol
 bind = $super SHIFT, R, exec, hyprctl reload
 bind = $super SHIFT, D, exec, $fullmenu
 bind = $super, Space, togglefloating
+bind = $super, C, togglefloating
 bind = $super, Q, killactive,
-bind = $super, C, exec, conky-toggle
+# bind = $super, C, exec, conky-toggle
 bind = $super, E, exec, code
 bind = $super, F, fullscreen
 bind = CTRL SHIFT, Escape, exec, $term --class btop -T btop -e btop # Open btop
