--- a/.config/hypr/hyprconfigs/navigation.conf
+++ b/.config/hypr/hyprconfigs/navigation.conf
@@ -54,6 +54,7 @@ bind = $super, 1, workspace, 1
 bind = $super, 2, workspace, 2
 bind = $super, 3, workspace, 3
 bind = $super, 4, workspace, 4
+bind = $super, CTRL, workspace, 4
 bind = $super, 5, workspace, 5
 bind = $super, 6, workspace, 6
 bind = $super, 7, workspace, 7
