--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ $lock = $scriptsDir/lockscreen
 $colorpicker = $scriptsDir/colorpicker
 $wofi_beats = $scriptsDir/wofi-beats
 $files = dolphin
-$browser = librewolf
+$browser = brave
 $editor = alacritty -e lvim
 $term = kitty
 $email = thunderbird
