--- a/.config/hypr/hyprconfigs/monitors.conf
+++ b/.config/hypr/hyprconfigs/monitors.conf
@@ -15,7 +15,7 @@ monitor=HDMI-A-6,1920x1080@60,1920x0,1
 #monitor=HDMI-A-2,1920x1080@60,1920x0,1
 #workspace=HDMI-A-2,2
 
-monitor=DP-6,1920x1080@60,0x0,1
+# monitor=DP-6,1920x1080@60,0x0,1
 # monitor=DP-6,10801920x@60,0x0,1
 # Example :
 #monitor=eDP-1,transform,0
