--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,9 @@
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'swaroopch/tmux-pomodoro'
+set -g @plugin 'tmux-plugins/tpm'
 # vim motions
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
