--- a/.config/hypr/hyprconfigs/theme.conf
+++ b/.config/hypr/hyprconfigs/theme.conf
@@ -59,8 +59,8 @@ dwindle {
   preserve_split = true
 }
 
-master {
-  # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-  new_is_master = true
-  mfact = 0.5
-}
+# master {
+#   # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+#   new_is_master = true
+#   mfact = 0.5
+# }
